--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
-  language: python
-  python:
+language: python
+python:
     - 3.6
     - nightly
-  script:
+install:
+  - pip install .
+  - pip install -r requirements.txt
+script:
     - pytest
