--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ python:
     - 2.7
     - 3.6
 install:
-  - pip install .[test]
-  - pip install pytest-cov
+    - pip install .[test]
+    - pip install codecov
+    - pip install pytest-cov
 script:
     - py.test --cov=./
+after_success:
+    - codecov
