--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ install:
     - pip install codecov
     - pip install pytest-cov
 script:
-    - py.test --cov=mlpipe tests/
+    - py.test --cov src/
 after_success:
     - codecov
